--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+run-shell "powerline-daemon -q"
+source "/Users/viktor/Library/Python/3.5/lib/python/site-packages/powerline/bindings/tmux/powerline.conf"
+
 set -g default-terminal "screen-256color"
 
 set -g status-bg colour238
@@ -9,4 +12,5 @@ neww -n Vimeca vim
 neww -n dfsf
 
 bind-key o run "cmus-remote -u"
+
 
