use env variable and update vimrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 run-shell "powerline-daemon -q"
-source "/Users/viktor/Library/Python/3.5/lib/python/site-packages/powerline/bindings/tmux/powerline.conf"
+source "$POWERLINE_LOC/powerline/bindings/tmux/powerline.conf"
 
 set -g default-terminal "screen-256color"
 
@@ -9,8 +9,7 @@ set -g status-fg colour83
 new -n WindowName Command
 neww -n Music cmus
 neww -n Vimeca vim
-neww -n dfsf
+neww -n Command
 
 bind-key o run "cmus-remote -u"
-
 
