--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,38 @@
-run-shell "powerline-daemon -q"
-source "$POWERLINE_LOC/powerline/bindings/tmux/powerline.conf"
+# Don't use the powerline for now
+#run-shell "powerline-daemon -q"
+#source "$POWERLINE_LOC/powerline/bindings/tmux/powerline.conf"
+
+set -g prefix C-u
+set -g base-index 1
 
 set -g default-terminal "screen-256color"
 
 set -g status-bg colour238
 set -g status-fg colour83
 
-new -n WindowName Command
-neww -n Music cmus
-neww -n Vimeca vim
-neww -n Command
+setw -g mode-keys vi
+
+set -g history-limit 10000
+
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
+
+bind-key C-L next-window
+bind-key C-H previous-window
+
+# copy paste
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# just kidding
+unbind Left
+unbind Down
+unbind Right
+unbind Up
 
 bind-key o run "cmus-remote -u"
+#bind-key r source-file ~/.tmux.conf ; display "Config reloaded!"
 
+# go to last prompt
+bind-key b copy-mode \; send-keys -X start-of-line \; send-keys -X search-backward "]$ "
