--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,8 @@ set -g base-index 1
 
 set -g default-terminal "screen-256color"
 
+set -g display-time 3000
+
 set -g status-bg colour238
 set -g status-fg colour83
 
@@ -36,3 +38,9 @@ bind-key o run "cmus-remote -u"
 
 # go to last prompt
 bind-key b copy-mode \; send-keys -X start-of-line \; send-keys -X search-backward "]$ "
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'roy2220/easyjump.tmux'
+
+run '~/.tmux/plugins/tpm/tpm'
