Make it compatible with the startup daemon

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,7 +33,7 @@ unbind Down
 unbind Right
 unbind Up
 
-bind-key o run "cmus-remote -u"
+bind-key o run "/usr/local/bin/cmus-remote -u"
 #bind-key r source-file ~/.tmux.conf ; display "Config reloaded!"
 
 # go to last prompt
