Keep the current dir when opening panes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,6 +22,8 @@ bind ^A select-pane -t :.+
 
 bind-key C-L next-window
 bind-key C-H previous-window
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
 
 # copy paste
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
