--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,7 @@ set -g display-time 3000
 
 set -g status-bg colour238
 set -g status-fg colour83
+set -g status-justify centre
 
 setw -g mode-keys vi
 
